1998-11-27  Thomas Hepper    <th@icem.de>

	* changer-src/scsi-aix.c Some changes in the error handling in
	scsi command execution
	* changer-src/scsi-changer-driver.c More debug prints.
	removed Endian16/Endian24 (replaced with macros)
	* changer-src/scsi-chio.c make get_clean_state work on linux
	* changer-src/scsi-defs.h  added macros for converting from/to
	SCSI CDB MSB type
	* docs/TAPE.CHANGERS add note about AIX and chg-scsi

1998-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c(export_one): export the last_level and
	consecutive_runs field.
	* server-src/amadmin.c(import_one): import the last_level and
	consecutive_runs field.

1998-11-24  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: uhh, every other decl has a leading
	'extern' so writev() should as well

1998-11-24  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: if no writev() decl exists, declare one

1998-11-24  Mike Grupenhoff <kashmir@munge.com>

	* configure.in: check for <sys/uio.h>, check for a writev() decl
	in <unistd.h> and/or <sys/uio.h>

1998-11-24  Mike Grupenhoff <kashmir@munge.com>

	* common-src/writev.c (writev): new file, implements writev for
	systems that lack it

1998-11-24  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: include <sys/uio.h> if it exists.  Otherwise,
	define struct iovec

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amlabel.c: insist on being run as the dump user (ala
	amlabel) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amadmin.c: fix minor message format problem.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amlabel.c: insist on being run as the dump user (ala
	amflush) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amrmtape.sh.in: insist on being run as the dump user (ala
	amdump) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>
