@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: planner.c,v 1.78 1998/11/12 13:18:43 martinea Exp $
+ * $Id: planner.c,v 1.79 1998/11/28 22:56:55 martinea Exp $
  *
  * backup schedule planner for the Amanda backup system.
  */
@@ -529,7 +529,7 @@ disk_t *dp;
 
     /* calculated fields */
 
-    if(info.command == PLANNER_FORCE) {
+    if(info.command & PLANNER_FORCE) {
 	/* force a level 0, kind of like a new disk */
 	if(dp->strategy == DS_NOFULL) {
 	    /*
@@ -548,8 +548,8 @@ disk_t *dp;
 		    dp->host->hostname, dp->name);
 
 	    /* clear force command */
-	    if(info.command == PLANNER_FORCE)
-		info.command = NO_COMMAND;
+	    if(info.command & PLANNER_FORCE)
+		info.command ^ PLANNER_FORCE;
 	    if(put_info(dp->host->hostname, dp->name, &info))
 		error("could not put info record for %s:%s: %s",
 		      dp->host->hostname, dp->name, strerror(errno));
@@ -596,7 +596,7 @@ disk_t *dp;
 	    }
 	}
     }
-    else if(info.command == PLANNER_FORCE)
+    else if(info.command & PLANNER_FORCE)
 	ep->dump_priority += 1;
     /* else XXX bump up the priority of incrementals that failed last night */
 
@@ -606,8 +606,8 @@ disk_t *dp;
 	if(ep->next_level0 <= 0) {
 	    /* update the date field */
 	    info.inf[0].date = today;
-	    if(info.command == PLANNER_FORCE)
-		info.command = NO_COMMAND;
+	    if(info.command & PLANNER_FORCE)
+		info.command ^ PLANNER_FORCE;
 	    ep->next_level0 += conf_dumpcycle;
 	    ep->last_level = 0;
 	    if(put_info(dp->host->hostname, dp->name, &info))
@@ -679,7 +679,7 @@ disk_t *dp;
 
     i = 0;
 
-    if(!(dp->skip_full || dp->strategy == DS_NOFULL))
+    if(!dp->skip_full && !(dp->strategy == DS_NOFULL) && (!(info.command & FORCE_BUMP) || dp->skip_incr))
 	askfor(ep, i++, 0, &info);
 
     if(!dp->skip_incr) {
@@ -693,8 +693,18 @@ disk_t *dp;
 	    int curr_level;
 
 	    curr_level = ep->last_level;
-	    if(curr_level == 0)
+
+	    if(info.command & FORCE_NO_BUMP) {
+		if(curr_level >= 0) { /* level 0 already asked for */
+		    askfor(ep, i++, curr_level, &info);
+		}
+	    }
+	    else if(info.command & FORCE_BUMP) {
+		askfor(ep, i++, curr_level+1, &info);
+	    }
+	    else if(curr_level == 0) {
 		askfor(ep, i++, 1, &info);
+	    }
 	    else {
 		askfor(ep, i++, curr_level, &info);
 		/*
