@@ -1,3 +1,12 @@
+1998-11-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/infofile.h: declare FORCE_BUMP and FORCE_NO_BUMP
+	as command.
+	* server-src/amadmin.c (force_one,unforce_one,info_one): work
+	with info.command with bit operator.
+	* server-src/planner.c (setup_estimate): work with info.command
+	with bit operator, support for FORCE_BUMP and FORCE_NO_BUMP command.
+
 1998-11-27  Thomas Hepper    <th@icem.de>
 
 	* changer-src/scsi-aix.c Some changes in the error handling in
